# deploy-test

./: .gitignore  .pre-commit-config.yaml  Dockerfile.kestra  docker-compose.yml  pyproject.toml
iac/: .terraform.lock.hcl  backend.tf  bigquery.tf  compute-cloud.tf  kestra.tf  outputs.tf  providers.tf  sa.tf  ssh_keys.tf  startup.sh  storage.tf  terraform.tfvars.template  variables.tf
src/dbt/earthquake_transformations/: dbt_project.yml  packages.yml
src/dbt/earthquake_transformations/macros/: gen_coordinates.sql
src/dbt/earthquake_transformations/models/: schema.yml
src/dbt/earthquake_transformations/models/mart/: daily_earthquake_summary.sql  geo_earthquake_analysis.sql
src/dbt/earthquake_transformations/models/raw/: raw_earthquakes.sql
src/dbt/earthquake_transformations/models/staging/: stg_earthquakes.sql
src/files/: api_extract_schema.py  ingest_data.py
src/flows/: eq-proj_api-to-bq-gcs-stg.yml  eq-proj_dbt.yml  kv_store.yml.template
